# Mega-Paper-Filter

./: .gitignore  QUICK_START.md  README.md  README_clustering.md  README_frontend.md  README_generalized.md  WORKFLOW_GUIDE.md  ZOTERO_README.md  analyze_paper_types.py  check_url_support.py  cluster_from_db.py  cluster_papers.py  cluster_papers_generic.py  clustering_visualization.html  config_template.json  configure_scholar_mirror.py  database.py  db_manager.py  debug_selectors.py  embedding_clustering.py  llm_cluster_papers.py  main.py  parse-paper.py  parse_bibtex.py  parse_paper_db.py  process_zotero_csv.py  pyproject.toml  sample_papers.bib  scholar_config.txt  serve_generic.py  serve_visualization.py  start_backend.py  start_dev.sh  test_acm_selectors.py  test_google_scholar.py  test_llm_clustering.py
backend/: main.py  settings.py
configs/: arxiv_config.json  asplos_config.json  ieee_config.json  pubmed_config.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: AIProcessingPage.tsx  ClusterVisualization.tsx  ClusteringInterface.tsx  Dashboard.tsx  FileUpload.tsx  PaperList.tsx  SettingsPage.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
src/: abstract_extractor.py  dblp_api.py  google_scholar_extractor.py  openai_api.py
test/: test_title_only_search.py  test_visible.py
