[project]
name = "paper-labeler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openai>=1.99.6",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "selenium>=4.11.0",
    "webdriver-manager>=4.0.0",
]
