[project]
name = "paper-labeler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.99.6",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "selenium>=4.11.0",
    "webdriver-manager>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0.0",
    "aiofiles>=23.0.0",
    "cryptography>=41.0.0",
    "bibtexparser>=1.4.1",
    "sentence-transformers>=5.1.0",
]
